--- a/snake.html
+++ b/snake.html
@@ -9,13 +9,13 @@
         <div id="start-container">
             <h1>Snake Game</h1>
             <p class="start-p">Press the start button to start the game!</p>
-            <img src="/Users/elanilerdugrul/Desktop/Big Girl Job/Yes leet queen/SnakeGame/sources/snake-photo.png" 
+            <img src="./snake-photo.png" 
                 alt="Snake cartoon" class="snake-image">
             <button type="submit" id="start-button">START</button>
         </div>
         <div id="snake-game-container" style="display: none;">
             <h1>Let's Play</h1>
-            <img src="/Users/elanilerdugrul/Desktop/Big Girl Job/Yes leet queen/SnakeGame/sources/diamond2-photo.png" 
+            <img src="./diamond2-photo.png" 
                 alt="Diamond cartoon" class="diamond-image"> <span id="diamond-count">0</span>
             <div class="box">
                 <canvas id="board"></canvas>
