best score display

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <div id="snake-game-container" style="display: none;">
             <h1>Let's Play</h1>
             <img src="./diamond2-photo.png" 
-                alt="Diamond cartoon" class="diamond-image"> <span id="diamond-count">0</span>
+                alt="Diamond cartoon" class="diamond-image"> <span id="diamond-count">0</span> 
+                <span id="best-score-table">Best score: <span id="best-score">0</span></span>
             <div class="box">
                 <canvas id="board"></canvas>
             </div>
